--- a/styles.css
+++ b/styles.css
@@ -1,63 +1,9 @@
+/*Font family for all elements*/
+*{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
+}
 body{
-    background-color: #4B3FB3FF;
-}
-.menubar{
-    display: inline-block; 
-}
-.header-menu {
-  display: flex; 
-  align-items: center; 
-  font-family: Inter; /* Body */
-  font-weight: 400; 
-  opacity: 1; 
-}
-  /* Header Menu 1 - Item */
-.header-menu .header-menu-item {
-    padding: 5px;
-    align-items: center; 
-    justify-content: center; 
-    color: #F3F4F6FF; /* neutral-200 */
-    border-radius: 0px; 
-    cursor: pointer; 
-    white-space: nowrap; 
-  }
-
-  /* Header menu item 1 */
-.header-menu .header-menu-item:nth-child(1) {
-    font-family: Inter; 
-    font-weight: 400; 
-    color: #F3F4F6FF; /* neutral-200 */
-  }
-  /* Header menu item 2 */
-.header-menu .header-menu-item:nth-child(2) {
-    font-family: Inter; 
-    font-weight: 400; 
-    color: #F3F4F6FF; /* neutral-200 */
-  }
-  /* Header menu item 3 */
-.header-menu .header-menu-item:nth-child(3) {
-    font-family: Inter; 
-    font-weight: 400; 
-    color: #F3F4F6FF; /* neutral-200 */
-  }
-  /* Header Menu 1 - Item with indicator */
-.header-menu .header-menu-item.indicator {
-    position: absolute; 
-    bottom: 0px; 
-    width: 100%; 
-    height: 4px; 
-    background: #CCD0F5FF; /* primary-150 */
-    border-radius: 0px; 
-  }
-    /* Header Menu 1 - Selected item */
-.header-menu .header-menu-item:hover{
-        color: #CCD0F5FF; /* primary-150 */
-      }
-  /* Image 1 */
-.lang_icons {
-  width: 35px; 
-  height: auto; 
-  border-radius: 0px 0px 0px 0px; 
+    background-color: #4B3FB3 !important;
 }
 .profilehomepage {
   max-width: 100%; 
@@ -80,13 +26,15 @@ body{
   display: flex; 
   align-items: center; 
   justify-content: center; 
-  font-family: Inter; 
   font-weight: 400; 
   color: #FFFFFFFF; /* white */
   background: #161D6FFF; /* primary-500 */
   opacity: 1; 
   border: none; 
   border-radius: 4px; /* border-m */
+  -webkit-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  transition: all .3s ease;
 }
 /* Hover */
 .buttoncontact:hover {
@@ -101,18 +49,6 @@ body{
 /* Disabled */
 .buttoncontact:disabled {
   opacity: 0.4; 
-}
-.pagefooter1{
-  position: absolute;
-  bottom:0;
-  margin: 0;
-}
-.footericons{
-  width: 34px; 
-  height: 36px; 
-  border-radius: 0px;
-  filter: invert(1);/*Tone image change*/
-  padding-right: 1%;
 }
 /*CSS Format for links (active, pressed previously and after visited) remove all format*/
 a:link, a:visited, a:active, a::after{
@@ -160,4 +96,33 @@ p{
 .explogo{
   width: 50%;
   height: auto;
+}
+#mail-button{
+  cursor: pointer;
+  position: relative;
+}
+/*CSS for copied text:*/
+.copied{
+  color: #F3F4F6;
+  position: absolute;
+  bottom: -15px;
+  left: 18%;
+  text-align: center;
+}
+/*Microinteractions for icons*/
+.icons-interactions{
+  transform: scale(1);
+  -webkit-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  transition: all .3s ease;
+}
+.icons-interactions:hover{
+  transform: scale(1.25);
+}
+
+/*Microinteractions for icons (mobile version): Here identifies if hover is not used*/
+@media(hover: none){
+  .icons-interactions:active{
+    transform: scale(1.25);
+  }
 }
