--- a/styles.css
+++ b/styles.css
@@ -339,6 +339,36 @@ ul{
 #projects_header li.active{
   transform: scale(1.5);
 }
+
+/*Styles for Projects Gallery*/
+/*Image Modal in Skills Page Styles*/
+.image_modal {
+  width: 90%;
+  max-width: 1000px;
+  /*Center the image*/
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transition: opacity .3s ease;
+  -o-transition: opacity .3s ease;
+  transition: opacity .3s ease;
+}
+
+/*All i "brother tags" that appear inside of .image_modal*/
+.image_modal+i {
+  position: absolute;
+  top: 2%;
+  right: 1%;
+  color: #FFFFFF;
+  font-size: 2.25rem;
+  display: inline-block;
+  padding: 0.75rem 0.875rem;
+  cursor: pointer;
+}
+.card-img-top{
+  cursor: pointer;
+}
 /*Microinteractions for icons (mobile version): Here identifies if hover is not used*/
 @media(hover: none){
   .icons-interactions:active{
